--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -14,3 +14,7 @@
 
   margin-top: 0.5rem;
 }
+
+.button {
+  max-width: 100%;
+}
